--- a/example_tvm.ipynb
+++ b/example_tvm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
        "-2639.1842014888507"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,7 @@
        "0.045432970406767303"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,22 +85,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "keyword argument repeated (<ipython-input-23-ea80ca0557da>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-23-ea80ca0557da>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    TVM(n=25*12, r=.04/12, r=0.03, fv=0).calc_pmt()\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m keyword argument repeated\n"
-     ]
+     "data": {
+      "text/plain": [
+       "378904.96594965487"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "TVM(n=25*12, r=.04/12, r=0.03, fv=0).calc_pmt()"
+    "TVM(n=25*12, r=.04/12, pmt=-2000, fv=0).calc_pv()"
    ]
   },
   {
