adding ipython notebooks

--- a/time_value_of_money.ipynb
+++ b/time_value_of_money.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div align=right><font color=black>Copyright &copy; 2013 Ondrej Martinsky, All rights reserved\n",
+    "<br><a href=\"www.quantandfinancial.com\">www.quantandfinancial.com</a></div>\n",
     "# Time Value of Money"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +40,7 @@
        "-2639.1842014888507"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,15 +106,6 @@
    "source": [
     "TVM(n=25*12, r=.04/12, pmt=-2000, fv=0).calc_pv()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
