--- a/black_litterman.ipynb
+++ b/black_litterman.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=right><font color=black>Copyright &copy; 2013 Ondrej Martinsky, All rights reserved\n",
-    "<br><a href=\"www.quantandfinancial.com\">www.quantandfinancial.com</a></div>\n",
+    "Copyright &copy; 2013 Ondrej Martinsky, All rights reserved\n",
+    "\n",
+    "[www.quantandfinancial.com](www.quantandfinancial.com)\n",
     "# Portfolio Optimization"
    ]
   },
