--- a/time_value_of_money.ipynb
+++ b/time_value_of_money.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=right><font color=black>Copyright &copy; 2013 Ondrej Martinsky, All rights reserved\n",
-    "<br><a href=\"www.quantandfinancial.com\">www.quantandfinancial.com</a></div>\n",
+    "Copyright &copy; 2012 Ondrej Martinsky, All rights reserved\n",
+    "\n",
+    "[www.quantandfinancial.com](www.quantandfinancial.com)\n",
     "# Time Value of Money"
    ]
   },
@@ -109,6 +110,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
