--- a/black_litterman.ipynb
+++ b/black_litterman.ipynb
@@ -7,7 +7,7 @@
     "Copyright &copy; 2013 Ondrej Martinsky, All rights reserved\n",
     "\n",
     "[www.quantandfinancial.com](www.quantandfinancial.com)\n",
-    "# Portfolio Optimization"
+    "# Portfolio Optimization and Black-Litterman"
    ]
   },
   {
