--- a/black_litterman.ipynb
+++ b/black_litterman.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Few of the mathematical symbols used in this notebook\n",
+    "## Few mathematical symbols used in this notebook\n",
     "\n",
     "| Python symbol | Math Symbol | Comment\n",
     "| -- | -- | --\n",
