Moved treasury_yield_curve_bootstrapping to ipython notebook Removed old files

--- a/black_litterman.ipynb
+++ b/black_litterman.ipynb
@@ -11,6 +11,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mathematical symbols used in this notebook\n",
+    "\n",
+    "| Python symbol | Math Symbol | Comment\n",
+    "| -- | -- | --\n",
+    "| rf | $r$ | risk free rate\n",
+    "| lmb | $\\lambda$ | risk aversion coefficient\n",
+    "| C | $C$ | Assets covariance matrix\n",
+    "| V | $V$ | Assets variances (diagonal in covariance matrix)\n",
+    "| W | $W$ | Assets weights\n",
+    "| R | $R$ | Assets returns\n",
+    "| mean | $\\mu$ | Portfolio historical return\n",
+    "| var | $\\sigma$ | Portfolio historical variance\n",
+    "| Pi | $\\Pi$ | Portfolio equilibrium excess returns\n",
+    "| tau | $\\tau$ | Scaling factor for Black-litterman"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -33,26 +53,6 @@
     "from structures.quote import QuoteSeries\n",
     "import scipy.optimize\n",
     "from pandas import *"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Few mathematical symbols used in this notebook\n",
-    "\n",
-    "| Python symbol | Math Symbol | Comment\n",
-    "| -- | -- | --\n",
-    "| rf | $r$ | risk free rate\n",
-    "| lmb | $\\lambda$ | risk aversion coefficient\n",
-    "| C | $C$ | Assets covariance matrix\n",
-    "| V | $V$ | Assets variances (diagonal in covariance matrix)\n",
-    "| W | $W$ | Assets weights\n",
-    "| R | $R$ | Assets returns\n",
-    "| mean | $\\mu$ | Portfolio historical return\n",
-    "| var | $\\sigma$ | Portfolio historical variance\n",
-    "| Pi | $\\Pi$ | Portfolio equilibrium excess returns\n",
-    "| tau | $\\tau$ | Scaling factor for Black-litterman"
    ]
   },
   {
