fixed latex bug in bootstrapping.ipynb

--- a/yield_curve_bootstrapping/bootstrapping.ipynb
+++ b/yield_curve_bootstrapping/bootstrapping.ipynb
@@ -697,7 +697,8 @@
    "source": [
     "### Bootstrapping\n",
     "To bootstrap the yield curve, we will be building upon a fact that all bonds priced at par have coupon rate equal to the yield-to-maturity, as denoted in the following equation:\n",
-    "$$ \\frac{C}{\\left ( 1+r \\right )^1} + \\frac{C}{\\left ( 1+r \\right )^2}+...+\\frac{1+C}{\\left ( 1+r \\right )^n} = $100 $$"
+    "\n",
+    "$$ \\frac{C}{\\left ( 1+r \\right )^1} + \\frac{C}{\\left ( 1+r \\right )^2}+...+\\frac{1+C}{\\left ( 1+r \\right )^n} = 100 $$"
    ]
   },
   {
