--- a/heath_jarrow_morton/hjm.ipynb
+++ b/heath_jarrow_morton/hjm.ipynb
@@ -7,7 +7,7 @@
     "Copyright &copy; 2015 Ondrej Martinsky, All rights reserved\n",
     "\n",
     "[www.quantandfinancial.com](www.quantandfinancial.com)\n",
-    "# Heath Jarrow Morton Model"
+    "# Heath Jarrow Morton Model (HJM)"
    ]
   },
   {
@@ -114,7 +114,7 @@
     "    assert rates.shape[1]==tenors.shape[0]\n",
     "    assert rates.shape[0]==timeline.shape[0]\n",
     "    return timeline, tenors, rates\n",
-    "hist_timeline, tenors, hist_rates = load('heath_jarrow_morton.csv')\n",
+    "hist_timeline, tenors, hist_rates = load('hjm_data.csv')\n",
     "print('Timeline shape: ',str(hist_timeline.shape))\n",
     "print('Tenors shape  : ',str(tenors.shape))\n",
     "print('Rates shape   : ',str(hist_rates.shape))\n",
