fixed www.quantandfinancial.com link in IPYNB headers

--- a/heath_jarrow_morton/hjm.ipynb
+++ b/heath_jarrow_morton/hjm.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Copyright &copy; 2015 Ondrej Martinsky, All rights reserved\n",
     "\n",
-    "[www.quantandfinancial.com](www.quantandfinancial.com)\n",
+    "[www.quantandfinancial.com](http://www.quantandfinancial.com)\n",
     "# Heath Jarrow Morton Model (HJM)"
    ]
   },
