--- a/black_litterman/black_litterman.ipynb
+++ b/black_litterman/black_litterman.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Copyright &copy; 2013 Ondrej Martinsky, All rights reserved\n",
     "\n",
-    "[www.quantandfinancial.com](www.quantandfinancial.com)\n",
+    "[www.quantandfinancial.com](http://www.quantandfinancial.com)\n",
     "# Portfolio Optimization and Black-Litterman"
    ]
   },
