--- a/time_value_of_money/tvm.ipynb
+++ b/time_value_of_money/tvm.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Copyright &copy; 2012 Ondrej Martinsky, All rights reserved\n",
     "\n",
-    "[www.quantandfinancial.com](www.quantandfinancial.com)\n",
+    "[www.quantandfinancial.com](http://www.quantandfinancial.com)\n",
     "# Time Value of Money"
    ]
   },
